Created all needed endpoints for now
